--- a/django_chat/main/react/minimized-chat/package.json
+++ b/django_chat/main/react/minimized-chat/package.json
@@ -24,6 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "webpackbuild": "webpack  --config webpack.config.prod.js",
+    "webpackdev" : "webpack --config webpack.config.js",
     "startwebpack": "webpack-dev-server"
   },
   "eslintConfig": {
